--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "yolo-vue3",
   "version": "1.0.0",
-  "description": "所有的伟大，都源于一次勇敢的开始。",
-  "main": "index.js",
+  "description": "从零实现 Vue3 核心功能逻辑",
+  "main": "lib/yolo-vue.cjs.js",
+  "module": "lib/yolo-vue.esm.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +23,11 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
+    "rollup": "^3.28.1",
     "typescript": "^5.1.6"
   }
 }
